# src/app/docs/openapi.json
@@ -434,207 +434,6 @@
         },
         "required": ["message", "timestamp", "level"]
       },
-      "MetadataSchemaConfigSchema": {
-        "type": "object",
-        "properties": {
-          "mode": {
-            "type": "string",
-            "enum": ["infer", "custom"]
-          },
-          "schema": {
-            "type": "object",
-            "additionalProperties": {
-              "type": "string"
-            },
-            "nullable": true
-          }
-        },
-        "required": ["mode"]
-      },
-      "SnapshotSchema": {
-        "oneOf": [
-          {
-            "type": "object",
-            "properties": {
-              "status": {
-                "type": "string",
-                "enum": ["queued", "error", "running"]
-              },
-              "type": {
-                "type": "string",
-                "enum": ["website", "upload"]
-              }
-            },
-            "required": ["status", "type"]
-          },
-          {
-            "type": "object",
-            "properties": {
-              "status": {
-                "type": "string",
-                "enum": ["success"]
-              },
-              "chunks_count": {
-                "type": "number"
-              },
-              "type": {
-                "type": "string",
-                "enum": ["website"]
-              },
-              "metadata": {
-                "type": "object",
-                "properties": {
-                  "title": {
-                    "type": "string",
-                    "nullable": true
-                  },
-                  "favicon": {
-                    "type": "string",
-                    "nullable": true
-                  },
-                  "screenshot": {
-                    "type": "string",
-                    "nullable": true
-                  }
-                }
-              }
-            },
-            "required": ["status", "chunks_count", "type", "metadata"]
-          },
-          {
-            "type": "object",
-            "properties": {
-              "status": {
-                "type": "string",
-                "enum": ["success"]
-              },
-              "chunks_count": {
-                "type": "number"
-              },
-              "type": {
-                "type": "string",
-                "enum": ["upload"]
-              },
-              "metadata": {
-                "type": "object",
-                "properties": {
-                  "file_name": {
-                    "type": "string",
-                    "nullable": true
-                  },
-                  "file_size": {
-                    "type": "number",
-                    "nullable": true
-                  },
-                  "modified_at": {
-                    "type": "string",
-                    "format": "date-time",
-                    "nullable": true
-                  },
-                  "created_at": {
-                    "type": "string",
-                    "format": "date-time",
-                    "nullable": true
-                  }
-                }
-              }
-            },
-            "required": ["status", "chunks_count", "type", "metadata"]
-          }
-        ]
-      },
-      "Snapshot": {
-        "oneOf": [
-          {
-            "type": "object",
-            "properties": {
-              "status": {
-                "type": "string",
-                "enum": ["queued", "error", "running"]
-              },
-              "type": {
-                "type": "string",
-                "enum": ["website", "upload"]
-              }
-            },
-            "required": ["status", "type"]
-          },
-          {
-            "type": "object",
-            "properties": {
-              "status": {
-                "type": "string",
-                "enum": ["success"]
-              },
-              "chunks_count": {
-                "type": "number"
-              },
-              "type": {
-                "type": "string",
-                "enum": ["website"]
-              },
-              "metadata": {
-                "type": "object",
-                "properties": {
-                  "title": {
-                    "type": "string",
-                    "nullable": true
-                  },
-                  "favicon": {
-                    "type": "string",
-                    "nullable": true
-                  },
-                  "screenshot": {
-                    "type": "string",
-                    "nullable": true
-                  }
-                }
-              }
-            },
-            "required": ["status", "chunks_count", "type", "metadata"]
-          },
-          {
-            "type": "object",
-            "properties": {
-              "status": {
-                "type": "string",
-                "enum": ["success"]
-              },
-              "chunks_count": {
-                "type": "number"
-              },
-              "type": {
-                "type": "string",
-                "enum": ["upload"]
-              },
-              "metadata": {
-                "type": "object",
-                "properties": {
-                  "file_name": {
-                    "type": "string",
-                    "nullable": true
-                  },
-                  "file_size": {
-                    "type": "number",
-                    "nullable": true
-                  },
-                  "modified_at": {
-                    "type": "string",
-                    "format": "date-time",
-                    "nullable": true
-                  },
-                  "created_at": {
-                    "type": "string",
-                    "format": "date-time",
-                    "nullable": true
-                  }
-                }
-              }
-            },
-            "required": ["status", "chunks_count", "type", "metadata"]
-          }
-        ]
-      },
       "defaultMetadataSchema": {
         "type": "object",
         "properties": {
